feat: 옷 속성 정의 업데이트 로직 개선 및 단일 선택 값 처리 추가